fixed table (misc); added horizontal scroll bar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -130,3 +130,7 @@ pre>code {
 .highlight-comp>code {
   background-color: transparent !important;
 }
+
+.table-responsive {
+  overflow-x: auto;
+}
